--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.freemarker.template-loader-path: classpath:/templates
-spring.freemarker.suffix: .ftl
+spring.freemarker.template-loader-path=classpath:/templates
+spring.freemarker.suffix=.ftl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/order_management_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
